# open2api-rs

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  README_CN.md  bundle.sh  install.sh  open2api
examples/: non_stream_demo.rs  non_stream_test.rs  stream_demo.rs  stream_test.rs
lib/bot/: Cargo.toml
lib/bot/src/: chat.rs  request.rs  response.rs
src/: backend.rs  config.rs  converter.rs  lib.rs  main.rs  models.rs  router.rs  server.rs
src/models/: claude.rs  openai.rs
