[workspace]
members = ["lib/bot", "."]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Heng30"]
license = "MIT"
readme = "README.md"
keywords = ["Claude", "Openai", "API", "LLM"]
homepage = "https://github.com/heng30/open2api"
repository = "https://github.com/heng30/open2api"
description = "Convert Claude API to Openai compatible API"

[workspace.dependencies]
log = "0.4"
axum = "0.8"
sqlx = "0.8"
tokio = "1.0"
serde = "1.0"
anyhow = "1.0"
chrono = "0.4"
blake3 = "1.8"
feed-rs = "2.3"
tracing = "0.1"
futures = "0.3"
reqwest = "0.13"
dotenvy = "0.15"
scraper = "0.26"
thiserror = "2.0"
tower-http = "0.6"
serde_json = "1.0"
env_logger = "0.11"
tokio-stream = "0.1"
tracing-subscriber = "0.3"

[package]
name = "open2api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
blake3.workspace = true
anyhow.workspace = true
futures.workspace = true
dotenvy.workspace = true
tracing.workspace = true
feed-rs.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
tower-http = { workspace = true, features = ["cors", "fs"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
reqwest = { workspace = true, features = ["json", "stream", "socks"] }

bot = { path = "lib/bot" }
scraper.workspace = true
