[workspace]
members = ["lib/bot", "."]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Heng30"]
license = "MIT"
readme = "README.md"
keywords = ["Claude", "Openai", "API", "LLM"]
homepage = "https://github.com/heng30/open2api"
repository = "https://github.com/heng30/open2api"
description = "Convert Claude API to Openai compatible API"

[workspace.dependencies]
log = "0.4"
axum = "0.8"
uuid = "1.0"
bytes = "1.0"
tower = "0.5"
serde = "1.0"
anyhow = "1.0"
tokio = "1.51"
chrono = "0.4"
tracing = "0.1"
futures = "0.3"
reqwest = "0.13"
dotenvy = "0.15"
thiserror = "2.0"
tower-http = "0.6"
serde_json = "1.0"
env_logger = "0.11"
tokio-stream = "0.1"
tracing-subscriber = "0.3"

[package]
name = "open2api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
bytes.workspace = true
anyhow.workspace = true
futures.workspace = true
dotenvy.workspace = true
tracing.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
tower-http = { workspace = true, features = ["cors"] }
reqwest = { workspace = true, features = ["json", "stream"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
bot = { path = "lib/bot" }
dotenvy.workspace = true
env_logger.workspace = true
